@@ -1,3 +1,9 @@
+2007-11-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/configure, win/tcl.m4: add ws2_32.lib / -lws2_32 to build.
+	* win/tclWinSock.c: remove dyn loading of winsock, assume that it
+	is always available now.
+
 2007-11-29  Don Porter	<dgp@users.sourceforge.net>
 
 	* generic/tclWinSock.c (InitializeHostName):	Correct error in
